# pyhon-uv-project-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  python-project.code-workspace  requirements-dev.txt  requirements.txt
.config/: configure.winget
src/python_package/: __init__.py
