[project]
name = "python-uv-project-template"
version = "0.1.0"
authors = [{ name = "Takahiro Ono" }]
maintainers = []
description = "Add your description here"
readme = "README.md"
license-files = ["LICEN[CS]E"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.0.1",
    "pylint>=3.3.7",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

# [project.urls]
# Documentation = "https://github.com"
# Issues = "https://github.com"
# Source = "https://github.com"

[project.scripts]
# Add your scripts here.

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "python_package"
module-root = "src"
# source-include = ["src/python_package/**"]

[tool.pylint]
# lint only unsupported features on py311
disable = ["all"]
enable = ["F", "E"]
py-version = "3.11"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
extend-select = ["UP"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
